--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -53,7 +53,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="0.4"
         android:background="@drawable/card_background"
         android:elevation="36dp">
 
@@ -85,7 +85,7 @@
                     android:text="Dashboard"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:id="@+id/dname"></TextView>
 
@@ -98,7 +98,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.5"
+        android:layout_weight="2.6"
         android:background="#FFFF"
 
         android:elevation="36dp">
