--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -139,7 +139,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="obsacle sensor"
+                        android:text="obstacle sensor"
                         android:textStyle="bold"
                         android:textSize="16dp"
                         android:textAlignment="center"
