--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -331,7 +331,7 @@
 <!--                        android:textSize="18dp" />-->
                     <Button
                         android:id="@+id/dstop"
-                        android:layout_width="wrap_content"
+                        android:layout_width="120dp"
                         android:layout_height="40dp"
                         android:layout_marginBottom="5dp"
                         android:background="@color/colorPrimary"
@@ -342,7 +342,28 @@
                         android:textColorHighlight="@color/colorPrimary"
                         android:textColorLink="@color/colorPrimary"
                         android:textCursorDrawable="@color/colorPrimary"
-                        android:textSize="18dp" />
+                        android:textSize="16dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Logout from Session"
+                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:gravity="center_horizontal" />
+
+                    <Button
+                        android:id="@+id/dlogout"
+                        android:layout_width="120dp"
+                        android:layout_height="40dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@color/colorPrimary"
+                        android:text="LOGOUT"
+
+                        android:textColor="#ffff"
+                        android:textColorHighlight="@color/colorPrimary"
+                        android:textColorLink="@color/colorPrimary"
+                        android:textCursorDrawable="@color/colorPrimary"
+                        android:textSize="16dp" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -393,50 +414,38 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <!--            sensors data 1-->
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="2"
-                android:layout_gravity="fill"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center"
-                    android:layout_gravity="center_vertical|center_horizontal">
-<!--                    <ImageView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:src="@drawable/ic_logo_background"/>-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Sensor1"-->
-<!--                        android:textStyle="bold"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:gravity="center_horizontal" />-->
-                    <Button
-                        android:id="@+id/dlogout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_marginBottom="5dp"
-                        android:background="@color/colorPrimary"
-                        android:text="LOGOUT"
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_row="1"-->
+<!--                android:layout_column="2"-->
+<!--                android:layout_gravity="fill"-->
+<!--                android:layout_rowWeight="1"-->
+<!--                android:layout_columnWeight="1"-->
+<!--                android:layout_margin="8dp"-->
+<!--                app:cardCornerRadius="8dp"-->
+<!--                app:cardElevation="8dp">-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:gravity="center"-->
+<!--                    android:layout_gravity="center_vertical|center_horizontal">-->
+<!--&lt;!&ndash;                    <ImageView&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:src="@drawable/ic_logo_background"/>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:text="Sensor1"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:textStyle="bold"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:textAlignment="center"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:gravity="center_horizontal" />&ndash;&gt;-->
+<!--                    -->
 
-                        android:textColor="#ffff"
-                        android:textColorHighlight="@color/colorPrimary"
-                        android:textColorLink="@color/colorPrimary"
-                        android:textCursorDrawable="@color/colorPrimary"
-                        android:textSize="18dp" />
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+<!--                </LinearLayout>-->
+<!--            </androidx.cardview.widget.CardView>-->
             <!--            ab aya msg ka-->
 
 
